--- a/commafeed/docker-compose.yml
+++ b/commafeed/docker-compose.yml
@@ -3,11 +3,23 @@ services:
     image: athou/commafeed:latest-h2
     restart: unless-stopped
     volumes:
-      - ./volumes/data:/commafeed/data
+      #- ./volumes/data:/commafeed/data
+      - data:/commafeed/data
     deploy:
       resources:
         limits:
           memory: 1G
     ports:
       - 9082:8082
+  
+  backup:
+    extends:
+      file: ../dvb/docker-compose.yml
+      service: backup
+    environment:
+      - BACKUP_PREFIX=commafeed
+    volumes:
+      - data:/backup/commafeed-backup:ro
 
+volumes:
+  data: 
