--- a/homepage/docker-compose.yml
+++ b/homepage/docker-compose.yml
@@ -5,13 +5,22 @@ services:
     environment:
       PUID: ${UID}
       PGID: ${GID}
+      HOMEPAGE_ALLOWED_HOSTS: homepage.lab.home
     ports:
       - '9300:3000'
     volumes:
-      - homepage_config:/app/config
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-    labels:
-      - 'com.centurylinklabs.watchtower.enable=true'
+      - ./volumes/config:/app/config
+      - ./volumes/icons:/app/public/icons
 
-volumes:
-  homepage_config:
+  dockerproxy:
+    image: ghcr.io/tecnativa/docker-socket-proxy:latest
+    restart: unless-stopped
+    environment:
+      - CONTAINERS=1 # Allow access to viewing containers
+      - SERVICES=1 # Allow access to viewing services (necessary when using Docker Swarm)
+      - TASKS=1 # Allow access to viewing tasks (necessary when using Docker Swarm)
+      - POST=0 # Disallow any POST operations (effectively read-only)
+    ports:
+      - 127.0.0.1:2375:2375
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro # Mounted as read-only
