--- a/borgmatic/docker-compose.yml
+++ b/borgmatic/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       - TZ=Europe/Oslo
       - BORG_PASSPHRASE
+      - BORG_RSH=ssh -i /root/.ssh/borg-pn50 -o IdentitiesOnly=yes
     volumes:
       - ./config:/etc/borgmatic.d/ 
 
