--- a/homarr/docker-compose.yml
+++ b/homarr/docker-compose.yml
@@ -8,7 +8,20 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - homarr_appdata:/appdata
     environment:
+      - DOCKER_HOSTNAMES=dockerproxy
+      - DOCKER_PORTS=2375
       - SECRET_ENCRYPTION_KEY
+
+  dockerproxy:
+    image: ghcr.io/tecnativa/docker-socket-proxy:latest
+    restart: unless-stopped
+    environment:
+      - CONTAINERS=1 # Allow access to viewing containers
+      - POST=1 # Allow POST operations 
+    ports:
+      - 127.0.0.1:2375:2375
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro # Mounted as read-only
 
 volumes:
   homarr_appdata:
