--- a/librechat/docker-compose.override.yml
+++ b/librechat/docker-compose.override.yml
@@ -7,10 +7,11 @@ services:
       - ./librechat.yaml:/app/librechat.yaml
       - ./volumes/images:/app/client/public/images
       - ./volumes/uploads:/app/uploads
-      - ./volumes/logs:/app/api/logs
+      - ./volumes/logs:/app/logs
     
   mongodb:
     container_name: !reset
+    image: mongo:8.2
     user: !reset
     volumes:
       - mongodb-vol:/data/db
