--- a/ntfy/docker-compose.yml
+++ b/ntfy/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  ntfy:
+  ntfy-server:
     image: binwiederhier/ntfy
     restart: unless-stopped
     command:
@@ -15,6 +15,29 @@ services:
       - ntfy-cache:/var/cache/ntfy
     ports:
       - 9490:80
+    healthcheck: # optional: remember to adapt the host:port to your environment
+        test: ["CMD-SHELL", "wget -q --tries=1 http://localhost:80/v1/health -O - | grep -Eo '\"healthy\"\\s*:\\s*true' || exit 1"]
+        interval: 60s
+        timeout: 10s
+        retries: 3
+        start_period: 40s
+
+  ntfy-client:
+    image: binwiederhier/ntfy
+    restart: unless-stopped
+    depends_on:
+      ntfy-server:
+        condition: service_healthy
+    command:
+      - subscribe
+      # - --config=/etc/ntfy-client.yml
+      - --from-config
+    environment:
+      - TZ=Europe/Oslo    # optional: set desired timezone
+      # - NTFY_DEBUG=true
+    volumes:
+      - ./config/ntfy-client.yml:/etc/ntfy/client.yml
+      - ./logs:/var/log/ntfy
 
 volumes:
   ntfy-cache:
