--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -29,10 +29,6 @@ ha.lab.home {
     reverse_proxy rp4.lan:8123
 }
 
-homarr.lab.home {
-    reverse_proxy host-docker-internal:7575
-}
-
 librechat.lab.home {
     reverse_proxy host-docker-internal:9080
 }
@@ -53,10 +49,10 @@ freshrss.lab.home {
     reverse_proxy host-docker-internal:9099
 }
 
-gotify.lab.home,
-gotify.lab.home:80 {
-    reverse_proxy host-docker-internal:9480
-}
+# gotify.lab.home,
+# gotify.lab.home:80 {
+#     reverse_proxy host-docker-internal:9480
+# }
 
 ntfy.lab.home,
 ntfy.lab.home:80 {
